# v-kernelx

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
include/: v_kernelx.h
python/tests/: test_kernel.py
python/v_kernelx/: __init__.py  engine.py  model.py  simulation.py  tools.py
src/: certification.rs  consensus.rs  dag.rs  developer.rs  drain.rs  engine.rs  error.rs  event.rs  ffi.rs  hash.rs  interpreter.rs  lib.rs  origin.rs  projection.rs  python_api.rs  query.rs  reconstruction.rs  record.rs  region.rs  replay.rs  sdk.rs  serialization.rs  signature.rs  snapshot.rs  state.rs  storage.rs  transfer.rs  validation.rs  wallet.rs
tests/: smoke.rs
ts/: package.json  tsconfig.json
ts/src/: client.ts  index.ts  node-shims.d.ts  types.ts
ts/tests/: smoke.test.ts
