[package]
name = "vnetworkx"
version = "0.1.0"
edition = "2021"

[lib]
name = "v_kernelx"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Python bindings
pyo3 = { version = "0.28.3", features = ["abi3-py38"] }